Fix x overflow for link pages

--- a/src/styles/sidebar.less
+++ b/src/styles/sidebar.less
@@ -27,6 +27,7 @@
 .sidebar__info-group-value-items {
   max-height: 350px;
   overflow-y: auto;
+  overflow-x: hidden;
   cursor: default;
 
   &--small {
